#
#--------------------------------------------------------------------------
#
#		CHANGE LOG FOR THE LATEX2HTML RELEASE
#
# What is recorded here are changes to any file of the LaTeX2HTML release
# *meaningful to the user*, such as new options or files, important bug
# fixes etc.
# A more detailed log history can be found within the particular files, near
# the top.
#
#               - latex2html.pin: keep newline before comment
#		  https://www.tug.org/pipermail/latex2html/2016-May/003953.html
#
#--------- v2016
#
#               - config: fix parsing of version number for pnmcrop
#               - config: fix uninitialized argument in error messages
#		- longtable: fix duplicate caption
#		  https://bugs.debian.org/310702
#               - pstoimg: fix pstoimg -depth 24 -flip cw
#		  https://bugs.debian.org/612126
#
#--------- v2015 apply patches from Debian
#
#		- add-abnt.patch
#		- add-floatflt-ins.patch
#		- add-url.patch
#		- eurosym.patch
#		- fix-gs-stderr.patch
#		- fix-image-types.patch
#		- fix-mathend-mark.patch
#		- fix-pdfoutput.patch
#		- fix-romanian.patch
#		- fix-spaces-in-filenames.patch
#		- fix-typos.patch
#		- html-version-4.patch
#		- l2hconf-fix-shebang.patch
#		- latex2html-fix-authoraddress.patch
#		- latex2html-fix-defined.patch
#		- makefiles-fixes.patch
#		- manpages.patch
#		- manual-fix-address.patch
#		- match-multiline.patch
#		- override-dvips-dot-in-filename-problem.patch
#		- pstoimg-dont-use-rgb-txt.patch
#		- pstoimg-fix-borders.patch
#		- pstoimg-fix-file-pattern.patch
#		- pstoimg-match-gray.patch
#
#--------- v98.1 (compiled by jcl)
#
#	Changes in the top-level directory:
#
#	rrm	latex2html.config
#	jcl	- New section header strings in &english_titles (corresponding
#		  entries also in german.perl, french.perl):
#		   $ref_title - this text heads the References section
#		   $pre_title - for preface
#		   $child_name - this text heads the table of child links
#		   $prf_name - for proofs